<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dust</groupId>
    <artifactId>service</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <modules>
        <module>dust-service-core</module>
        <module>dust-service-db</module>
        <module>dust-service-micro</module>
    </modules>
    <developers>
        <developer>
            <id>huangshengtao</id>
            <name>huangshengtao</name>
            <email>huangstao@hotmail.com</email>
        </developer>
    </developers>
    <properties>
        <java.version>1.8</java.version>
        <mysql-connector.version>6.0.5</mysql-connector.version>
        <fastjson.version>1.2.29</fastjson.version>
        <ojdbc.version>6</ojdbc.version>
        <druid.version>1.0.27</druid.version>
        <guava.version>21.0</guava.version>
        <lang3.version>3.5</lang3.version>
        <hazelcast.version>3.6.5</hazelcast.version>
        <dust.version>1.0.0</dust.version>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.5.2.RELEASE</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql-connector.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${fastjson.version}</version>
        </dependency>
        <dependency>
            <groupId>oracle</groupId>
            <artifactId>ojdbc</artifactId>
            <version>${ojdbc.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>${druid.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${lang3.version}</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>Dalston.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>dust</groupId>
                <artifactId>service-core</artifactId>
                <version>${dust.version}</version>
            </dependency>
            <dependency>
                <groupId>dust</groupId>
                <artifactId>service-db</artifactId>
                <version>${dust.version}</version>
            </dependency>
            <dependency>
                <groupId>dust</groupId>
                <artifactId>service-micro</artifactId>
                <version>${dust.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>